1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* hmac-md5.el (hmac-md5): Specify the 4th arg to `md5'
	as `binary' if possible.

1999-10-19  Kenichi OKADA <okada@opaopa.org>

	* hmac-md5.el (hmac-md5): fixed for XEmacs's md5.

1999-10-19  Kenichi OKADA <okada@opaopa.org>

	* md5.el: New file. (import from hmac package)
	* md5-el.el: New file. (import from hmac package)
	* md5-dl.el: New file. (import from hmac package)
	* sha1.el: New file. (import from hmac package)
	* sha1-el.el: New file. (import from hmac package)
	* sha1-dl.el: New file. (import from hmac package)
	* hmac-def.el: New file. (import from hmac package)
	* hmac-util.el: New file. (import from hmac package)
	* hmac-md5.el: New file. (import from hmac package)
	* hmac-sha1.el: New file. (import from hmac package)
	* FLIM-ELS (flim-modules): Add `md5 md5-el md5-dl sha1 sha1-el
	sha1-dl hmac-def hmac-util hmac-md5 hmac-sha1'.

1999-10-19  Kenichi OKADA <okada@opaopa.org>

	* SLIM-VERSION: New file.
	* sasl.el: Add keyword.

1999-10-19  Kenichi OKADA <okada@opaopa.org>

	* sasl.el: New file.
	* smtp.el (smtp-via-smtp): Use sasl.el for SASL.
	* FLIM-ELS (flim-modules): Add `sasl'.

1999-08-17  MORIOKA Tomohiko  <tomo@m17n.org>

	* FLIM: Version 1.13.2 (Kasanui) released.

1999-08-03  Yuuichi Teranishi <teranisi@gohome.org>

	* smtp.el (smtp-notify-success): New option.
	* (smtp-via-smtp): Request return receipt (defined in RFC1891) to
	SMTP server if `smtp-notify-success' is non-nil.
	[cf. <tm-ja:4872,4877>]

1999-08-02  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime.el (mime-entity-header-start-point): New generic function.
	(mime-entity-header-end-point): New generic function.

	* mmbuffer.el (mime-entity-header-start-point): New method.
	(mime-entity-header-end-point): New method.

1999-08-09  MORIOKA Tomohiko  <tomo@m17n.org>

	* FLIM-ELS (flim-modules): Add `mmdbuffer'.

1999-07-27  MORIOKA Tomohiko  <tomo@m17n.org>

	* mmdbuffer.el: New module.

1999-07-28  MORIOKA Tomohiko  <tomo@m17n.org>
